tests/ui/consts/dangling-alloc-id-ice.stderr
error: encountered dangling pointer in final value of constant
  --> $DIR/dangling-alloc-id-ice.rs:12:1
   |
LL | const FOO: &() = {
   | ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

